manifests/base/CI-dashboard-monitoring/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciflow-deployment
  labels:
    app: ciflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciflow
  template:
    metadata:
      labels:
        app: ciflow
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: ciflow-container
          image: harbor.th1enlm02.live/production/ci-dashboard-monitoring:4162af9-1749894269 # {"$imagepolicy": "production:ciflow-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: "550m"
              memory: "300Mi"
            limits:
              cpu: "600m"
              memory: "500Mi"
