manifests/base/CI-dashboard-monitoring/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ciflow-service
spec:
  selector:
    app: ciflow
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
